@@ -1,14 +1,13 @@
 package net.minecraft.client.render.model.json;
 
 import com.google.common.collect.Streams;
-import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.state.StateManager;
+import net.minecraft.util.Util;
 
 @Environment(EnvType.CLIENT)
 public class OrMultipartModelSelector implements MultipartModelSelector {
@@ -21,9 +20,6 @@ public class OrMultipartModelSelector implements MultipartModelSelector {
 
 	@Override
 	public Predicate<BlockState> getPredicate(StateManager<Block, BlockState> stateManager) {
-		List<Predicate<BlockState>> list = (List<Predicate<BlockState>>)Streams.stream(this.selectors)
-			.map(selector -> selector.getPredicate(stateManager))
-			.collect(Collectors.toList());
-		return state -> list.stream().anyMatch(predicate -> predicate.test(state));
+		return Util.anyOf(Streams.stream(this.selectors).map(selector -> selector.getPredicate(stateManager)).toList());
 	}
 }
